--- a/package.json
+++ b/package.json
@@ -39,14 +39,17 @@
     "@tarojs/components": "3.4.0",
     "@tarojs/plugin-framework-react": "3.4.0",
     "@tarojs/react": "3.4.0",
+    "@tarojs/rn-runner": "^3.4.0",
     "@tarojs/runtime": "3.4.0",
     "@tarojs/taro": "3.4.0",
-    "react": "^17.0.0",
-    "react-dom": "^17.0.0"
+    "@tarojs/taro-rn": "^3.4.0",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.0",
+    "react-native": "^0.66.0"
   },
   "devDependencies": {
     "@babel/core": "^7.8.0",
-    "@tarojs/mini-runner": "3.4.0",
+    "@tarojs/mini-runner": "^3.4.0",
     "@tarojs/webpack-runner": "3.4.0",
     "@types/react": "^17.0.2",
     "@types/webpack-env": "^1.13.6",
