--- a/project.config.json
+++ b/project.config.json
@@ -2,7 +2,7 @@
   "miniprogramRoot": "./dist",
   "projectname": "Taro-React",
   "description": "Taro-React模板",
-  "appid": "touristappid",
+  "appid": "wxee395be2bbc7738d",
   "setting": {
     "urlCheck": true,
     "es6": false,
