修改文件路径

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,12 +6,12 @@
     "preserveConstEnums": true,
     "moduleResolution": "node",
     "experimentalDecorators": true,
-    "noImplicitAny": false,
     "allowSyntheticDefaultImports": true,
     "outDir": "lib",
     "noUnusedLocals": true,
     "noUnusedParameters": true,
-    "strictNullChecks": true,
+    "strict": true,
+    "noImplicitAny": false,
     "sourceMap": true,
     "baseUrl": ".",
     "rootDir": ".",
