taro版本能升级解决swiper切换残留问题

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
 	"name": "taro-h5-rn-weapp",
-  "author": "",
-  "version": "1.0.0",
+	"author": "",
+	"version": "1.0.0",
 	"private": true,
 	"description": "Taro-React模板",
 	"templateInfo": {
@@ -9,21 +9,21 @@
 		"typescript": true,
 		"css": "sass"
 	},
-  "browserslist": [
-    "last 3 versions",
-    "Android >= 4.1",
-    "ios >= 8"
-  ],
+	"browserslist": [
+		"last 3 versions",
+		"Android >= 4.1",
+		"ios >= 8"
+	],
 	"scripts": {
-    "dev:weapp": "npm run build:weapp -- --watch",
-    "dev:swan": "npm run build:swan -- --watch",
-    "dev:alipay": "npm run build:alipay -- --watch",
-    "dev:tt": "npm run build:tt -- --watch",
-    "dev:h5": "npm run build:h5 -- --watch",
-    "dev:rn": "npm run build:rn -- --watch",
-    "dev:qq": "npm run build:qq -- --watch",
-    "dev:jd": "npm run build:jd -- --watch",
-    "dev:quickapp": "npm run build:quickapp -- --watch",
+		"dev:weapp": "npm run build:weapp -- --watch",
+		"dev:swan": "npm run build:swan -- --watch",
+		"dev:alipay": "npm run build:alipay -- --watch",
+		"dev:tt": "npm run build:tt -- --watch",
+		"dev:h5": "npm run build:h5 -- --watch",
+		"dev:rn": "npm run build:rn -- --watch",
+		"dev:qq": "npm run build:qq -- --watch",
+		"dev:jd": "npm run build:jd -- --watch",
+		"dev:quickapp": "npm run build:quickapp -- --watch",
 		"build:weapp": "taro build --type weapp",
 		"build:swan": "taro build --type swan",
 		"build:alipay": "taro build --type alipay",
@@ -37,12 +37,12 @@
 	},
 	"dependencies": {
 		"@babel/runtime": "^7.7.7",
-		"@tarojs/components": "3.4.0",
+		"@tarojs/components": "3.4.1",
 		"@tarojs/plugin-framework-react": "3.4.0",
-		"@tarojs/react": "3.4.0",
+		"@tarojs/react": "3.4.1",
 		"@tarojs/rn-runner": "^3.4.0",
-		"@tarojs/runtime": "3.4.0",
-		"@tarojs/taro": "3.4.0",
+		"@tarojs/runtime": "3.4.1",
+		"@tarojs/taro": "3.4.1",
 		"@tarojs/taro-rn": "^3.4.0",
 		"react": "^17.0.2",
 		"react-dom": "^17.0.0",
@@ -50,15 +50,15 @@
 	},
 	"devDependencies": {
 		"@babel/core": "^7.8.0",
-		"@tarojs/mini-runner": "^3.4.0",
-		"@tarojs/webpack-runner": "3.4.0",
+		"@tarojs/mini-runner": "3.4.1",
+		"@tarojs/webpack-runner": "^3.4.1",
 		"@types/react": "^17.0.2",
 		"@types/webpack-env": "^1.13.6",
 		"@typescript-eslint/eslint-plugin": "^4.15.1",
 		"@typescript-eslint/parser": "^4.15.1",
-		"babel-preset-taro": "3.4.0",
+		"babel-preset-taro": "3.4.1",
 		"eslint": "^6.8.0",
-		"eslint-config-taro": "3.4.0",
+		"eslint-config-taro": "3.4.1",
 		"eslint-plugin-import": "^2.12.0",
 		"eslint-plugin-react": "^7.8.2",
 		"eslint-plugin-react-hooks": "^4.2.0",
