--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "taro-h5-rn-weapp",
-	"author": "",
+	"author": "MiniOcean404",
 	"version": "1.0.0",
 	"private": true,
 	"description": "Taro-React模板",
@@ -51,7 +51,7 @@
 	"devDependencies": {
 		"@babel/core": "^7.8.0",
 		"@tarojs/mini-runner": "3.4.1",
-		"@tarojs/webpack-runner": "^3.4.1",
+		"@tarojs/webpack-runner": "3.4.1",
 		"@types/react": "^17.0.2",
 		"@types/webpack-env": "^1.13.6",
 		"@typescript-eslint/eslint-plugin": "^4.15.1",
